# open-health-statistics

./: .gitignore  LICENSE  README.md  _config.yml  about.qmd  blog.md  config.toml  config.yaml  create_publication.py  environment.yml  github-topics.md  github.py  gitlab.py  index.md  index.qmd  json2csv.ipynb  org_list.yaml  org_list_test.yaml  pyproject.toml  requirements.txt  run.py  run2.py  table.html  temp-plot.html  topics_html_template.html
.github/workflows/: main.yml  re-run.yml
_assets/style/: js.html  styles.css
_includes/: NHSUK_table.html  chart.html  navbar.html  plotly_chart.html  plotly_obj.html  plotly_table.html  plotly_topics_table1.html  plotly_topics_table2.html  sidebar.html  table.html  table1.html  test.html  topics.html  update.html
_layouts/: default.html
assets/: custom.css  nhsuk.css
assets/data/: openhealthstats.csv
components/header/: header-org-white.html
data/: github-api-output_2021-03-04.csv  nhsuk_repos.json  org_repos_agg.csv
docs/: _quarto.yml
github_api/: 111online_repos.json  nhsconnect2_repos.json  nhsconnect_repos.json  nhsdigital_repos.json  nhsengland_repos.json  nhsuk_repos.json  nhsx_repos.json
pages/: github_api_call.qmd
src/ingestion/: github_api_call.py  preprocessing.py  validation_checks.py
src/processing/: clean.py  data_processing.py
src/utils/: data_connections.py  file_paths.py  load_yaml.py  logging_config.py
tests/unittests/: README.md  test_github_api_call.py
